[issue:0002223] Feature types and WMS layers from server which are unreachable disappears